--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
+.GitHubLogo {
+  position: absolute;
+  left: 10px;
+}
+
+.Item {
+  font-size: 18px;
+  margin: 10px;
+  text-decoration: none;
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.Item:hover {
+  margin: 10px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.Navigation {
+  min-height: 6vh;
+  background-color: #282c34;
+  top: 0;
+  text-align: right;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.Scrolled{
+  position: fixed;
+  text-align: right;
+  top: 0;
+  left: 0;
+  background-color: #282c34;
+}
+
+.Skill {
+  border-radius: 3px;
+  border: none;
+  color: white;
+  background-color: rgb(57, 65, 65);
+  display: inline-block;
+  margin: 2px;
+  padding: 10px 16px;
+  font-size: 20px;
+  transition-duration: 0.4s;
+  
+}
+
+.Skill:hover {
+  background-color: #61dafb;
+}
+
+.Skill:focus {
+  outline: none;
+}
+
+.animate {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.animateSlow {
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.one {
+  -webkit-animation-delay: 0.2s;
+  -moz-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+
+.two {
+  -webkit-animation-delay: 0.3s;
+  -moz-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+
+.three {
+  -webkit-animation-delay: 0.4s;
+  -moz-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+
+
+@-webkit-keyframes fadeInUp {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
   }
+
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
   }
+}
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
