--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #282c34;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +12,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1 {
+  font-size: 60px;
+  color: #ffffff;
+
+  animation: bounce;
+}
+
+h2 {
+  font-size: 36px;
+  color: #ffffff;
+}
+
+p {
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+  font-size: 20px;
+}
+
+a {
+  color: #61dafb;
+}
+ 
