--- a/src/App.css
+++ b/src/App.css
@@ -47,16 +47,16 @@
   margin: 2px;
   padding: 10px 16px;
   font-size: 20px;
-  transition-duration: 0.4s;
-  
+  transition: all 0.3s ease;
 }
 
 .Skill:hover {
   background-color: #61dafb;
+  transform: scale(1.04);
 }
 
 .Skill:focus {
-  outline: none;
+  background-color: #61dafb;
 }
 
 .animate {
