--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
-body {
-  background-color: #282c34;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  @apply text-white
+}
+
+body {
+  margin: 0;
+  background-color: #282c34;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,27 +18,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-h1 {
-  font-size: 40px;
-  color: #ffffff;
-
-  animation: bounce;
-}
-
-h2 {
-  font-size: 28px;
-  color: #ffffff;
-}
-
-p {
-  margin-left: auto;
-  margin-right: auto;
-  width: 900px;
-  font-size: 18px;
-}
-
-a {
-  color: #61dafb;
-}
- 
